--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "babel-plugin-macros": "^3.1.0",
+    "bootstrap": "^5.2.2",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-scripts": "5.0.1",
